applications/metube/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: downloads
  labels:
    app: downloads
