applications/metube/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metube
  labels:
    app: metube
    app.kubernetes.io/name: metube
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: metube
  template:
    metadata:
      labels:
        app: metube
        app.kubernetes.io/name: metube
    spec:
      containers:
        - name: metube
          image: ghcr.io/alexta69/metube:latest
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 96Mi
            limits:
              memory: 768Mi
          volumeMounts:
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: metube-downloads
