applications/metube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metube
  labels:
    app: metube
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: http
      protocol: TCP
  selector:
    app: metube
